test/cases/restrict/restrict_fptr.c
// RUN: %check -e %s

main()
{
	int (*restrict f)(void); // CHECK: error: restrict qualified function pointer
}
